--- a/HangmanHomePage.html
+++ b/HangmanHomePage.html
@@ -49,11 +49,11 @@
 		</div>
 		<div id="card-container">
 			<div id="cards">
-				<button>Risk</button>
-				<button>Consolation</button>
-				<button>Discount</button>
-				<button>Buy A Letter</button>
-				<button>Category</button>
+				<button class="card-button">Risk</button>
+				<button class="card-button">Consolation</button>
+				<button class="card-button">Discount</button>
+				<button class="card-button">Buy A Letter</button>
+				<button class="card-button">Category</button>
 			</div>
 		</div>
 	</div>
