--- a/HangmanHomePage.html
+++ b/HangmanHomePage.html
@@ -3,8 +3,9 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="HangmanGameHome.css">
+	<script type="text/javascript" src="HangmanGame.js"></script>
 </head>
-<body>
+<body  onload="makeButton()">
 	<nav>
 		<ul>
 			<li><a href="#">Home</a></li>
@@ -25,16 +26,6 @@
 			</div>
 			<div id="alphabet">
 				<div id="letter-container">
-					<button>A: 18</button>
-					<button>B: 8</button>
-					<button>C: 12</button>
-					<button>D: 10</button>
-					<button>E: 20</button>
-					<button>F: 8</button>
-					<button>G: 9</button>
-					<button>H: 10</button>
-					<button>I: 16</button>
-					<button>J: 5</button>
 				</div>			
 			</div>
 		</div>
